--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,7 @@ padding: 32px 0;
 .btn:focus{
 background-color:#188CE8;}
 /*Features*/
-.features-section{
+.features.section{
 padding-top: 94px;
 padding-bottom: 94px;
 }
@@ -181,6 +181,7 @@ padding-bottom: 94px;
                 letter-spacing: 0.03em;
                 text-transform: uppercase;
                 color: var(--main-txt-cl);
+                margin-bottom: 10px;
 }
 
 .caption-txt {
