--- a/css/styles.css
+++ b/css/styles.css
@@ -218,12 +218,23 @@ padding-bottom: 94px;
 }
 
 /*наша команда*/
-.section-3{
+.team.section{
     background-color:  #F5F4FA;
+    padding-top: 94px;
+    padding-bottom: 94px;
 }
-
-.list-images{
-    width: 270px;
+.list.team{
+display: flex;
+flex-wrap: wrap;
+gap: 30px;
+}
+.team-card.item{
+    background-color: var(--txt-color);
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.team-card-desc{
+padding: 30px 10px;
 }
 
 .list-title{
@@ -232,6 +243,7 @@ padding-bottom: 94px;
         line-height:1.18em;
         text-align: center;
         letter-spacing: 0.03em;
+        margin-bottom: 10px;
 }
 
 .list-txt{
