--- a/css/styles.css
+++ b/css/styles.css
@@ -254,9 +254,19 @@ padding: 30px 10px;
         color: var(--secondary-txt-cl);
 }
 
-
+/*PORTFOLIO*/
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
 
 /*Filters*/
+.filters.list{
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    margin-bottom: 50px;
+}
 .list-btn {
     background-color: #F5F4FA;
     font-weight: 500;
@@ -266,6 +276,8 @@ padding: 30px 10px;
         letter-spacing: 0.03em;
         cursor: pointer;
         border: none;
+        padding: 6px 22px;
+        border-radius: 4px;
 }
 
 .button-current{
@@ -279,15 +291,25 @@ padding: 30px 10px;
     color: var(--txt-color);
 }
 /*projects*/
-.list-img{
+.list.projects{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+.projects-card.item{
     width: 370px;
 }
-
+.projects-card-desc{
+    padding: 20px 24px;
+    border: 1px solid #EEEEEE;
+    border-top: none;
+}
 .list-heading{
     font-weight: 700;
         font-size: 18px;
         line-height:2em;
         letter-spacing: 0.06em;
+        margin-bottom: 4px;
 }
 
 .list-text{    
